--- a/index.html
+++ b/index.html
@@ -18,12 +18,12 @@
 }
 body{
   margin:0;
-  font-family: Arial, sans-serif;
+  font-family:Arial, sans-serif;
   background:var(--bg);
   color:var(--text);
 }
 header{
-  background:#007bff;
+  background:#0066cc;
   color:white;
   padding:15px;
   text-align:center;
@@ -31,37 +31,32 @@ header{
 .container{
   padding:15px;
 }
-input{
+select,input{
   width:100%;
   padding:10px;
-  margin-bottom:15px;
+  margin-bottom:10px;
   font-size:16px;
 }
 .card{
   background:var(--card);
   padding:15px;
-  margin-bottom:15px;
   border-radius:10px;
+  margin-bottom:15px;
 }
 .card h3{
   margin-top:0;
-}
-img{
-  width:100%;
-  border-radius:10px;
+  color:#0066cc;
 }
 button{
-  padding:8px 15px;
-  border:none;
-  background:#007bff;
-  color:white;
-  border-radius:5px;
-  cursor:pointer;
-}
-.toggle{
   position:fixed;
   bottom:20px;
   right:20px;
+  padding:10px 15px;
+  border:none;
+  background:#0066cc;
+  color:white;
+  border-radius:50%;
+  font-size:18px;
 }
 </style>
 </head>
@@ -70,58 +65,132 @@ button{
 
 <header>
 <h2>📸 Radiographic Positioning</h2>
-<p>বাংলা + English | Offline App</p>
+<p>Complete Offline Web App | বাংলা + English</p>
 </header>
 
 <div class="container">
 
-<input type="text" id="search" placeholder="Search Procedure..." onkeyup="searchProc()">
+<select id="category" onchange="render()">
+<option value="all">All Categories</option>
+<option>Chest</option>
+<option>Abdomen</option>
+<option>Skull</option>
+<option>Cervical Spine</option>
+<option>Thoracic Spine</option>
+<option>Lumbar Spine</option>
+<option>Upper Limb</option>
+<option>Lower Limb</option>
+</select>
 
-<div class="card">
-<h3>🫁 Chest PA</h3>
-<img src="https://via.placeholder.com/400x200?text=Chest+PA">
-<p><b>Patient Position:</b> Erect, chest against detector</p>
-<p><b>Central Ray:</b> Perpendicular to T7</p>
-<p><b>Exposure:</b> 110–125 kVp</p>
-<p><b>বাংলা:</b> রোগী সোজা দাঁড়িয়ে বুক ক্যাসেটের সাথে লাগানো</p>
-</div>
+<input type="text" id="search" placeholder="Search Procedure..." onkeyup="render()">
 
-<div class="card">
-<h3>🦴 Abdomen AP</h3>
-<img src="https://via.placeholder.com/400x200?text=Abdomen+AP">
-<p><b>Patient Position:</b> Supine</p>
-<p><b>Central Ray:</b> Iliac crest level</p>
-<p><b>Exposure:</b> 70–80 kVp</p>
-<p><b>বাংলা:</b> রোগী চিৎ অবস্থায় শোয়ানো</p>
-</div>
-
-<div class="card">
-<h3>🧠 Skull AP</h3>
-<img src="https://via.placeholder.com/400x200?text=Skull+AP">
-<p><b>Patient Position:</b> Supine or erect</p>
-<p><b>Central Ray:</b> Nasion</p>
-<p><b>Exposure:</b> 70–80 kVp</p>
-<p><b>বাংলা:</b> মাথা সোজা করে রাখা</p>
-</div>
+<div id="list"></div>
 
 </div>
 
-<div class="toggle">
-<button onclick="toggleMode()">🌙 / ☀️</button>
-</div>
+<button onclick="toggle()">🌙</button>
 
 <script>
-function toggleMode(){
-  document.body.classList.toggle("dark");
+const data = [
+{
+category:"Chest",
+name:"Chest PA",
+position:"Erect, chest against detector",
+cr:"Perpendicular to T7",
+exposure:"110–125 kVp",
+breathing:"Full inspiration",
+bn:"রোগী সোজা দাঁড়িয়ে বুক ক্যাসেটের সাথে লাগানো"
+},
+{
+category:"Chest",
+name:"Chest Lateral",
+position:"Left side against detector",
+cr:"Mid thorax",
+exposure:"110–125 kVp",
+breathing:"Full inspiration",
+bn:"বাম পাশ ক্যাসেটের সাথে"
+},
+{
+category:"Abdomen",
+name:"Abdomen AP Supine",
+position:"Supine",
+cr:"Iliac crest level",
+exposure:"70–80 kVp",
+breathing:"Expiration",
+bn:"রোগী চিৎ হয়ে শোয়া"
+},
+{
+category:"Skull",
+name:"Skull PA (Caldwell)",
+position:"PA, nose & forehead on IR",
+cr:"15° caudal, nasion",
+exposure:"70–80 kVp",
+breathing:"Suspend",
+bn:"নাক ও কপাল ক্যাসেটে লাগানো"
+},
+{
+category:"Cervical Spine",
+name:"C-Spine Open Mouth",
+position:"AP open mouth",
+cr:"Center of open mouth",
+exposure:"70–80 kVp",
+breathing:"Suspend",
+bn:"মুখ খুলে দাঁত আলাদা"
+},
+{
+category:"Lumbar Spine",
+name:"L-Spine AP",
+position:"Supine",
+cr:"L3 level",
+exposure:"75–85 kVp",
+breathing:"Expiration",
+bn:"কোমরের মাঝ বরাবর"
+},
+{
+category:"Upper Limb",
+name:"Hand PA",
+position:"Hand flat on detector",
+cr:"3rd MCP joint",
+exposure:"50–60 kVp",
+breathing:"No instruction",
+bn:"হাত সোজা ক্যাসেটে"
+},
+{
+category:"Lower Limb",
+name:"Knee AP",
+position:"Leg extended",
+cr:"1 cm below patella",
+exposure:"60–70 kVp",
+breathing:"No instruction",
+bn:"পা সোজা রেখে"
 }
+];
 
-function searchProc(){
-  let input = document.getElementById("search").value.toLowerCase();
-  let cards = document.getElementsByClassName("card");
-  for(let i=0;i<cards.length;i++){
-    let text = cards[i].innerText.toLowerCase();
-    cards[i].style.display = text.includes(input) ? "block" : "none";
-  }
+function render(){
+let cat=document.getElementById("category").value;
+let s=document.getElementById("search").value.toLowerCase();
+let out="";
+data.forEach(d=>{
+if((cat==="all"||d.category===cat)&&
+(d.name.toLowerCase().includes(s))){
+out+=`
+<div class="card">
+<h3>${d.name}</h3>
+<p><b>Category:</b> ${d.category}</p>
+<p><b>Patient Position:</b> ${d.position}</p>
+<p><b>Central Ray:</b> ${d.cr}</p>
+<p><b>Exposure:</b> ${d.exposure}</p>
+<p><b>Breathing:</b> ${d.breathing}</p>
+<p><b>বাংলা:</b> ${d.bn}</p>
+</div>`;
+}
+});
+document.getElementById("list").innerHTML=out;
+}
+render();
+
+function toggle(){
+document.body.classList.toggle("dark");
 }
 </script>
 
